# Game-Theoretic-Approach-To-Request-Routing

./: .gitignore  D.html  README.md  makefile  ne.html  out.gv  pyproject.toml  run_streamlit.py
request_routing_game/: game.py  main.py  permutations.py  vis.py  waiting.py
tests/: test.csv  test_waiting.py
