[tool.poetry]
name = "request_routing_game"
version = "0.1.0"
description = ""
authors = ["Blake Smith <blakeinvictoria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
networkx = "^2.6.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
